--- a/src/app/tile/tile.component.scss
+++ b/src/app/tile/tile.component.scss
@@ -8,11 +8,10 @@
   svg {
     width: 100%;
     height: 100%;
-    display: block;
-
-    g {
-      transition: transform 0.4s cubic-bezier(0.4, 0, 0.2, 1);
+    display: block;    g {
+      transition: transform 0.6s cubic-bezier(0.4, 0, 0.2, 1);
       will-change: transform;
+      transform-origin: center;
     }
   }
 
