--- a/src/app/tile/tile.component.scss
+++ b/src/app/tile/tile.component.scss
@@ -11,7 +11,7 @@
     display: block;    g {
       transition: transform 0.6s cubic-bezier(0.4, 0, 0.2, 1);
       will-change: transform;
-      transform-origin: center;
+      transform-origin: 50% 50%;
     }
   }
 
