--- a/src/app/tile/tile.component.scss
+++ b/src/app/tile/tile.component.scss
@@ -8,15 +8,16 @@
   svg {
     width: 100%;
     height: 100%;
-    display: block;    g {
-      transition: transform 0.6s cubic-bezier(0.4, 0, 0.2, 1);
-      will-change: transform;
-      transform-origin: 50% 50%;
+    display: block;
+
+    g {
+      transition: transform 600ms cubic-bezier(0.4, 0, 0.2, 1);
+      transform-origin: 50px 50px;
     }
   }
 
   &:hover {
-    background-color: var(--bs-gray-200);
+    opacity: 0.8;
   }
 
   .tile-path {
