--- a/src/app/tile/tile.component.html
+++ b/src/app/tile/tile.component.html
@@ -1,8 +1,16 @@
 <div class="tile" (click)="onTileClick()">
   <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100">
-    <g [style.transform]="'rotate(' + rotation + 'deg)'">
-      <path class="tile-path" d="M0,50 A50,50 0 0,0 50,0"/>
-      <path class="tile-path" d="M50,100 A50,50 0 0,1 100,50"/>
+    <g [style.transform]="'rotate(' + rotation + 'deg)'">      <ng-container [ngSwitch]="pattern">
+        <!-- Curved Pattern -->
+        <ng-container *ngSwitchCase="'curve'">
+          <path class="tile-path" d="M0,50 A50,50 0 0,0 50,0"/>
+          <path class="tile-path" d="M50,100 A50,50 0 0,1 100,50"/>
+        </ng-container>
+        <!-- Triangular Pattern -->
+        <ng-container *ngSwitchCase="'triangle'">
+          <path class="tile-path filled-path" d="M0,0 L100,0 L0,100 Z"/>
+        </ng-container>
+      </ng-container>
     </g>
   </svg>
 </div>
