Added save functionality and gallery view

--- a/src/app/truchet-grid/truchet-grid.component.html
+++ b/src/app/truchet-grid/truchet-grid.component.html
@@ -50,6 +50,14 @@
             <option value="triangle">Triangles</option>
           </select>
         </div>
+        
+        <!-- Save button -->
+        <button class="btn btn-outline-light ms-2" 
+          (click)="saveDesign()"
+          placement="bottom"
+          ngbTooltip="Save Design">
+          <i class="bi bi-save"></i>
+        </button>
       </div>
       
       <div class="navbar-nav ms-auto">
