--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-3">
   <div class="container-fluid">
-    <span class="navbar-brand">Truchet Pattern Tool</span>
+    <span class="navbar-brand">Truchet Generator</span>
     <div class="navbar-nav">
       <a class="nav-link" routerLink="/generator" routerLinkActive="active">Generator</a>
       <a class="nav-link" routerLink="/gallery" routerLinkActive="active">Gallery</a>
