--- a/src/app/truchet-grid/truchet-grid.component.html
+++ b/src/app/truchet-grid/truchet-grid.component.html
@@ -50,14 +50,6 @@
             <option value="triangle">Triangles</option>
           </select>
         </div>
-        
-        <!-- Save button -->
-        <button class="btn btn-outline-light ms-2" 
-          (click)="saveDesign()"
-          placement="bottom"
-          ngbTooltip="Save Design">
-          <i class="bi bi-save"></i>
-        </button>
       </div>
       
       <div class="navbar-nav ms-auto">
@@ -98,18 +90,7 @@
             [(ngModel)]="noiseFrequency"
             (ngModelChange)="applyNoisePattern()"
             min="0.1" max="5" step="0.1">
-        </div>        <button class="btn btn-outline-success me-2"
-          (click)="saveAsImage()"
-          placement="bottom"
-          ngbTooltip="Save as PNG">
-          <i class="bi bi-image"></i>
-        </button>
-        <button class="btn btn-outline-success"
-          (click)="saveAsSVG()"
-          placement="bottom"
-          ngbTooltip="Save as SVG">
-          <i class="bi bi-code-slash"></i>
-        </button>
+        </div>
       </div>
     </div>
   </nav>
@@ -126,5 +107,23 @@
         </div>
       </div>
     </div>
+  </div>
+
+  <div class="actions-container">
+    <button class="btn btn-primary btn-lg action-button" (click)="saveDesign()">
+      <i class="bi bi-save"></i> Save Design
+    </button>
+    <button class="btn btn-primary btn-lg action-button" 
+      (click)="saveAsImage()"
+      placement="top"
+      ngbTooltip="Download as PNG image">
+      <i class="bi bi-image"></i> Save as PNG
+    </button>
+    <button class="btn btn-primary btn-lg action-button" 
+      (click)="saveAsSVG()"
+      placement="top"
+      ngbTooltip="Download as SVG vector">
+      <i class="bi bi-code-slash"></i> Save as SVG
+    </button>
   </div>
 </div>
